Fixed theme flickering issue

--- a/src/App.css
+++ b/src/App.css
@@ -222,9 +222,9 @@ a:hover {
   }
 } */
 
-*/ .read-the-docs {
+/* .read-the-docs {
   color: #888;
-}
+} */
 
 @media (max-width: 600px) {
   .main-content {
